--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -19,57 +19,7 @@ jobs:
         uses: actions/checkout@v2
         with:
           path: repository
-
-      - name: Fast Submodule Checkout esp-idf
-        uses: 0xFEEDC0DE64/fast_submodule_checkout@main
-        with:
-          submodule: firmware/esp-idf
-          repo: repository
-
-      - name: Fast Submodule Checkout components/arduino-esp32
-        uses: 0xFEEDC0DE64/fast_submodule_checkout@main
-        with:
-          submodule: firmware/components/arduino-esp32
-          repo: repository
-
-      - name: Checkout remaining submodules
-        run: | 
-          cd firmware
-          git -C repository submodule update --init --recursive $(git -C repository submodule | awk '{ if ($2 != "esp-idf" && $2 != "components/arduino-esp32") print $2 }')
-
-  checkout-history:
-    runs-on: ubuntu-latest
-    name: Checkout (with history and submodules)
-    steps:
-      - name: Cache repository
-        uses: actions/cache@v2
-        id: cache-repository
-        with:
-          path: repository
-          key: ${{ runner.os }}-repository-history-${{ github.sha }}
-
-      - name: Checkout (without submodules)
-        uses: actions/checkout@v2
-        with:
-          path: repository
-          fetch-depth: 0  # Shallow clones should be disabled for a better relevancy of analysis
-
-      - name: Fast Submodule Checkout esp-idf
-        uses: 0xFEEDC0DE64/fast_submodule_checkout@main
-        with:
-          submodule: firmware/esp-idf
-          repo: repository
-
-      - name: Fast Submodule Checkout components/arduino-esp32
-        uses: 0xFEEDC0DE64/fast_submodule_checkout@main
-        with:
-          submodule: firmware/components/arduino-esp32
-          repo: repository
-
-      - name: Checkout remaining submodules
-        run: |
-          cd firmware
-          git -C repository submodule update --init --recursive $(git -C repository submodule | awk '{ if ($2 != "esp-idf" && $2 != "components/arduino-esp32") print $2 }')
+          submodules: recursive
 
   install-idf:
     runs-on: ubuntu-latest
