--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -107,7 +107,7 @@ jobs:
           echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
 
       - name: Upload Build Artifact
-        uses: actions/upload-artifact@3.1.3
+        uses: actions/upload-artifact@v3
         with:
           name: ws2812-clock_${{ matrix.node }}
           path: |
