--- a/.github/workflows/CI.yml
+++ b/.github/workflows/CI.yml
@@ -66,7 +66,7 @@ jobs:
 
       - name: Get esp-idf release name
         id: get-esp-idf-release
-        run: echo "::set-output name=tag_name::$(git -C repository/firmware/esp-idf describe --tags --abbrev=0)"
+        run: echo "tag_name=$(git -C repository/firmware/esp-idf describe --tags --abbrev=0)" >> $GITHUB_ENV
 
       - name: Cache .espressif
         id: cache-espressif
@@ -103,7 +103,7 @@ jobs:
 
       - name: Get esp-idf release name
         id: get-esp-idf-release
-        run: echo "::set-output name=tag_name::$(git -C repository/firmware/esp-idf describe --tags --abbrev=0)"
+        run: echo "tag_name=$(git -C repository/firmware/esp-idf describe --tags --abbrev=0)" >> $GITHUB_ENV
 
       - name: Cache .espressif
         id: cache-espressif
@@ -129,8 +129,8 @@ jobs:
       - name: Set outputs
         id: vars
         run: |
-          echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
-          echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+          echo "sha_short=$(git rev-parse --short HEAD)" >> $GITHUB_ENV
+          echo "branch=$(echo ${GITHUB_REF#refs/heads/})" >> $GITHUB_ENV
 
       - name: Upload Build Artifact
         uses: actions/upload-artifact@v3
