Fix git describe

--- a/firmware/main/CMakeLists.txt
+++ b/firmware/main/CMakeLists.txt
@@ -54,11 +54,13 @@ set_property(DIRECTORY "${COMPONENT_DIR}" APPEND PROPERTY
         ADDITIONAL_CLEAN_FILES "communication/webserver_files.h")
 
 execute_process(
-    COMMAND git describe --tags --always
-    WORKING_DIRECTORY ${COMPONENT_DIR}/..
+    COMMAND git describe --tags --always --dirty --long
+    WORKING_DIRECTORY ${COMPONENT_DIR}
     OUTPUT_VARIABLE GIT_VERSION
     OUTPUT_STRIP_TRAILING_WHITESPACE
 )
+
+message(STATUS "Git version: ${GIT_VERSION}")
 
 target_compile_options(${COMPONENT_TARGET}
     PRIVATE
